Placas De Video Teste

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="col-m12 col-xs-8 menu">
               <ul>
-                <li><a href="celsodamesjunior.github.io/infohardware">Home</a></li>
+                <li><a href="../infohardware/index.html">Home</a></li>
                 <li><a href="./index.html">Placas de Video</a></li>
                 <li><a href="celsodamesjunior.github.io/processadores">Processadores</a></li>
                 <li><a href="celsodamesjunior.github.io/memorias-ram">Memórias RAM</a></li>
